add react components

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,7 +11,7 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Example eosjs app</title>
+	<title>e voting system</title>
 	<link rel="stylesheet" href="src/styles.css">
 </head>
 
